Fixed bugs with icons

--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -1084,17 +1084,17 @@
 
 
 .footer_phone {
-   background-image: url("../../image/footer_img/phone.png");
+   background-image: url("../image/footer_img/phone.png");
    background-repeat: no-repeat;
    background-position: 0 0 ;
 }
 .footer_geo {
-   background-image: url("../../image/footer_img/Geo.png");
+   background-image: url("../image/footer_img/Geo.png");
    background-repeat: no-repeat;
    background-position: 0 0;
 }
 .footer_email {
-   background-image: url("../../image/footer_img/telegram.png");
+   background-image: url("../image/footer_img/telegram.png");
    background-repeat: no-repeat;
    background-position: 0 0;
 }
