--- a/css/style.css
+++ b/css/style.css
@@ -959,16 +959,16 @@ h6 {
   text-decoration: underline; }
 
 .footer_phone {
-  background-image: url("../../image/footer_img/phone.png");
+  background-image: url("../image/footer_img/phone.png");
   background-repeat: no-repeat;
   background-position: 0 0; }
 
 .footer_geo {
-  background-image: url("../../image/footer_img/Geo.png");
+  background-image: url("../image/footer_img/Geo.png");
   background-repeat: no-repeat;
   background-position: 0 0; }
 
 .footer_email {
-  background-image: url("../../image/footer_img/telegram.png");
+  background-image: url("../image/footer_img/telegram.png");
   background-repeat: no-repeat;
   background-position: 0 0; }
