--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -795,7 +795,7 @@
          margin: 0px 0px 20px 0px;  
       }   
       &__body {
-         padding: 50px 0px 0px 0px;
+         padding: 50px 30px 0px 30px;
          flex: 0 1 320px;
          text-align: center;
          height: 333px;
@@ -817,7 +817,7 @@
       }
 
       &__text {
-         margin: -50px 0px 0px 0px;
+         margin: 35px 0px 0px 0px;
          p:not(:last-child){
             padding: 0px 0px 10px 0px;
          }
@@ -875,16 +875,19 @@
 
 
 .phone {
-   position: relative;
-   left: 35%;
+   
+   width: 72px;
+   height: 72px;
 }
 .geo {
-   position: relative;
-   left: 40%;
+   
+   width: 72px;
+   height: 72px;
 }
 .telegram {
-   position: relative;
-   left: 35%;
+   
+   width: 72px;
+   height: 72px;
 }
 
 .get-in-touch__item__body:hover svg *{
