--- a/css/style.css
+++ b/css/style.css
@@ -741,7 +741,7 @@ h6 {
       .get-in-touch__item {
         margin: 0px 0px 20px 0px; } }
     .get-in-touch__item__body {
-      padding: 50px 0px 0px 0px;
+      padding: 50px 30px 0px 30px;
       flex: 0 1 320px;
       text-align: center;
       height: 333px;
@@ -759,7 +759,7 @@ h6 {
       background: #252B42;
       color: white; }
     .get-in-touch__item__text {
-      margin: -50px 0px 0px 0px; }
+      margin: 35px 0px 0px 0px; }
       .get-in-touch__item__text p:not(:last-child) {
         padding: 0px 0px 10px 0px; }
     .get-in-touch__item__text:hover {
@@ -799,16 +799,16 @@ h6 {
   color: #fff; }
 
 .phone {
-  position: relative;
-  left: 35%; }
+  width: 72px;
+  height: 72px; }
 
 .geo {
-  position: relative;
-  left: 40%; }
+  width: 72px;
+  height: 72px; }
 
 .telegram {
-  position: relative;
-  left: 35%; }
+  width: 72px;
+  height: 72px; }
 
 .get-in-touch__item__body:hover svg * {
   fill: #fff; }
